--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" i
     
     <h1>
    <img src="logo for website.png" width="90px" height="90px">
-      The MRK Financial Bank!
+      The MRK Financial Services!
       <img src="logo for website.png" width="90px" height="90px">
     </h1>
   </div>
@@ -86,7 +86,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" i
     <i class="social-icon fa fa-instagram" aria-hidden="true"></i>
 	<i class="social-icon fa fa-twitter" aria-hidden="true"></i>
     <i class="social-icon fa fa-linkedin" aria-hidden="true"></i>
-		<p>© Copyright 2021 THE MRK BANK.</p>
+		<p>© Copyright 2021 THE MRK Fin Serv.</p>
   </footer>
   <script>
     var preloader = document.getElementById("loading");
